--- a/test-terraform/action.yaml
+++ b/test-terraform/action.yaml
@@ -10,16 +10,10 @@ inputs:
 runs:
   using: composite
   steps:
-    - uses: actions/checkout@v5
-    - uses: hashicorp/setup-terraform@v3
-    - run: terraform init
-      shell: sh
-      working-directory: terraform
-      env:
-        AWS_ACCESS_KEY_ID: ${{ inputs.access-key }}
-        AWS_SECRET_ACCESS_KEY: ${{ inputs.secret-key }}
-        SCW_ACCESS_KEY: ${{ inputs.access-key }}
-        SCW_SECRET_KEY: ${{ inputs.secret-key }}
+    - uses: tlsquared/github-actions/terraform-init@main
+      with:
+        access-key: ${{ inputs.access-key }}
+        secret-key: ${{ inputs.secret-key }}
     - run: terraform validate
       shell: sh
       working-directory: terraform
